applied some improvements due JDK 17