@@ -10,7 +10,6 @@ import org.apache.commons.lang3.tuple.Pair;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class GenericToolSupport implements ToolSupport<GenericToolConfiguration> {
 
@@ -77,7 +76,7 @@ public class GenericToolSupport implements ToolSupport<GenericToolConfiguration>
                 .pathElements(localToolInstallationDetails.getPathElements())
                 .handledProjectResources(localToolInstallationDetails.getFileOverwrites()
                         .stream().map(Pair::getLeft)
-                        .collect(Collectors.toList()))
+                        .toList())
                 .build();
     }
 
